--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>jsonxml-editor</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
 <body>
 <div id="app"></div>
